--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Tommy Uber</string>
     <string name="title_activity_rider">Map</string>
+    <string name="title_activity_driver_location">Map</string>
 </resources>
